# Lab3

./: .gitignore  CMakeLists.txt  structs.c  structs.h
T1/: main.c
T10/: in.txt  main.c  out.txt
T2/: main.c
T3/: in.txt  main.c
T4/: main.c
T5/: in.txt  main.c
T6/: 1.txt  2.txt  3.txt  main.c  structs.h
T7/: in.txt  main.c
T8/: in.txt  main.c
T9/: main.c  t1.txt
